Update options to new names.

--- a/test/index.html
+++ b/test/index.html
@@ -25,10 +25,8 @@
                 windowWidth: 800,
                 windowHeight: 600,
                 windowName: "_google",
-                windowLocation: "yes",
-                windowStatus: "yes",
-                windowMenubar: "no",
-                windowScrollbars: "yes",
+                windowLocationbar: "yes",
+                windowStatusbar: "yes",
                 windowConfirm: "This opens a new window, to return to our site, simply close the window."
             });
             
